--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="nav-center">
           <!-- nav header -->
           <div class="nav-header">
-            <img src="logo (1).svg" class="logo" alt="logo" />
+            <img src="images/logo (1).svg" class="logo" alt="logo" />
             <button class="nav-toggle">
               <i class="fas fa-bars"></i>
             </button>
@@ -73,7 +73,7 @@
 
       <div class="about-center section-center">
         <article class="about-img">
-          <img src="noogle.jpeg" alt="" />
+          <img src="images/noogle.jpeg" alt="" />
         </article>
         <article class="about">
           <!-- btn container -->
@@ -138,18 +138,132 @@
 
 
 
-    <!-- services -->
-    <section id="services" class="section">
-      <div class="title">
-        <h2>our <span>services</span></h2>
-      </div>
-    </section>
+      <section class="questions">
+        <!-- title -->
+        <div class="title">
+          <h2>general questions</h2>
+        </div>
+        <!-- questions -->
+        <div class="section-center">
+          <!-- single question -->
+          <article class="question">
+            <!-- question title -->
+            <div class="question-title">
+              <p>do you accept all major credit cards?</p>
+              <button type="button" class="question-btn">
+                <span class="plus-icon">
+                  <i class="far fa-plus-square"></i>
+                </span>
+                <span class="minus-icon">
+                  <i class="far fa-minus-square"></i>
+                </span>
+              </button>
+            </div>
+            <!-- question text -->
+            <div class="question-text">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
+                dolore illo dolores quia nemo doloribus quaerat, magni numquam
+                repellat reprehenderit.
+              </p>
+            </div>
+          </article>
+          <!-- end of single question -->
+          <!-- single question -->
+          <article class="question">
+            <!-- question title -->
+            <div class="question-title">
+              <p>do you suppport local farmers?</p>
+              <button type="button" class="question-btn">
+                <span class="plus-icon">
+                  <i class="far fa-plus-square"></i>
+                </span>
+                <span class="minus-icon">
+                  <i class="far fa-minus-square"></i>
+                </span>
+              </button>
+            </div>
+            <!-- question text -->
+            <div class="question-text">
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem quibusdam at officiis ad hic dolorem magni magnam
+                 culpa ipsum eligendi animi, ratione sapiente adipisci neque est unde sit nobis veniam distinctio quae facere harum alias iste? Molestias asperiores est incidunt?
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
+                dolore illo dolores quia nemo doloribus quaerat, magni numquam
+                repellat reprehenderit.
+              </p>
+            </div>
+          </article>
+          <!-- end of single question -->
+          <!-- single question -->
+          <article class="question">
+            <!-- question title -->
+            <div class="question-title">
+              <p>do you use organic ingredients?</p>
+              <!-- button -->
+              <button type="button" class="question-btn">
+                <span class="plus-icon">
+                  <i class="far fa-plus-square"></i>
+                </span>
+                <span class="minus-icon">
+                  <i class="far fa-minus-square"></i>
+                </span>
+              </button>
+            </div>
+            <!-- question text -->
+            <div class="question-text">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
+                dolore illo dolores quia nemo doloribus quaerat, magni numquam
+                repellat reprehenderit.
+              </p>
+            </div>
+          </article>
+          <!-- end of single question -->
+      </section>
+ 
+
+
+
+
+      
     <!-- contact -->
     <section id="tours" class="section">
       <div class="title">
         <h2>featured <span>tours</span></h2>
       </div>
+      <div class="slider-container">
+        <div class="slide">
+          <img src="images/google-london-hq-the-google-uk-and-youtube-london-offices-at-6-pancras-square-near-kings-cross-station-in-central-london-uk-2DA8HB1.jpg" class="slide-img" alt="" />
+          <h1>1</h1>
+        </div>
+        <div class="slide">
+          <img src="images/images.jpg" alt="">
+          <h1>2</h1>
+        </div>
+        <div class="slide">
+          <img src="images/shutterstock_192086159.jpg" alt="">
+          <h1>3</h1>
+        </div>
+        <div class="slide">
+          <div>
+            <img src="./person-1.jpeg" class="person-img" alt="" />
+            <h4>susan doe</h4>
+            <h1>4</h1>
+          </div>
+        </div>
+      </div>
+      <div class="btn-container">
+        <button type="button" class="prevBtn">
+          prev
+        </button>
+        <button type="button" class="nextBtn">
+          next
+        </button>
+      </div>
     </section>
+
+
     <!-- footer -->
     <footer class="section">
       <p>
